# multi-agent-design-patterns

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/command/: commit.md
.claude/hooks/: README.md  auto_commit.py  schedule.json
.claude/rules/: git_commit_rules.md
llm-memory/evermind-practice/: README.md
llm-rag/: README.md
llm-rag/RAG-Challenge-2/basic-rag/: README.md  file_parser.py
llm-rag/RAG-Challenge-2/basic-rag/dataset/: README.md  db.py  init_db.py  models.py
llm-rag/RAG-Challenge-2/basic-rag/embeding/: __init__.py  client.py  providers.py
llm-rag/RAG-Challenge-2/basic-rag/index/: basic_index.py
llm-rag/RAG-Challenge-2/basic-rag/llm/: providers.py
llm-rag/RAG-Challenge-2/basic-rag/parser/: basic_parser.py  langchain_pdf_parser.py  model.py  paddleocr_parser.py  parser_common.py
llm-rag/RAG-Challenge-2/basic-rag/rerank/: client.py  providers.py
llm-rag/RAG-Challenge-2/basic-rag/writer/: rag_chunk_writer.py
llm-rag/RAG-Challenge-2/grep-rag/: README.md
llm-rag/RAG-Challenge-2/structural-rag/: README.md
llm-rag/RAG-Challenge-2/structural-rag/pipeline/: __init__.py  base.py  chunker.py  ingestion.py  (+3 more)
llm-rag/RAG-Data/: README.md
llm-rag/RAG-Data/IIya-rice/: README.md
llm-rag/RAG-Data/RAG-Challlenge-dataset/: README.md
llm-rag/embeding-model/: client.py  providers.py  test_embedding_clients.py
llm-rag/postgres-benchmark/: README.md
llm-rag/rerank-model/: client.py
multi-agent-framework/deer-flow/: README.md
multi-agent-framework/langchain/1-langchain-core/: README.md
(+16 files in other folders)
