[project]
name = "multi-agent-design-patterns"
version = "0.1.0"
description = "多智能体的设计模式合集"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "blob>=0.16",
    "deepagents>=0.4.3",
    "docling>=2.85.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.27.2.2",
    "ragas>=0.4.3",
    "sqlalchemy>=2.0.46",
]

[tool.uv.workspace]
members = [
    "example",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
